# scummtr

./: .clang-format  .dockerignore  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  COPYING  FAQ.md  NEWS.md  README.md
.github/ISSUE_TEMPLATE/: Bug-Report.yml
.github/extra-conf/: msvc-analysis-custom.ruleset
.github/workflow/: basic-compilation-test.yml  blank.yml
.github/workflows/: build-basic-test.yml  build.yml  lint-manpages.yml  scan-codeql.yml  scan-msvc-code-analysis.yml
man/: FontXY.1  man2html.sh  man2txt.sh  scummfont.1  scummrp.1  scummtr.1
man/html/: FontXY.html  scummfont.html  scummrp.html  scummtr.html
man/txt/: FontXY.txt  scummfont.txt  scummrp.txt  scummtr.txt
releases/: Dockerfile.linux86  Dockerfile.msdos  Dockerfile.win32  README.md  build.sh  clean.sh  package.sh
releases/output/win32/: .gitignore
src/FontXY/: CMakeLists.txt  FontXY.cpp
src/ScummFont/: CMakeLists.txt  scummfont.cpp
src/ScummRp/: CMakeLists.txt  backup.cpp  backup.hpp  block.cpp  block.hpp  file.cpp  file.hpp  io.cpp  io.hpp  main.cpp  rptypes.hpp  scummrp.cpp  scummrp.hpp  toc.cpp  toc.hpp  toolbox.cpp  toolbox.hpp  types.hpp
src/ScummTr/: CMakeLists.txt  main.cpp  script.cpp  script.hpp  scummtr.cpp  scummtr.hpp  text.cpp  text.hpp  trblock.cpp  trblock.hpp
src/common/: CMakeLists.txt  backup.cpp  backup.hpp  file.cpp  file.hpp  io.cpp  io.hpp  toolbox.cpp  toolbox.hpp  types.hpp
